--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:id="@+id/cloud_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#03A9F4"/>
+        app:basePassTimeMs="1000"
+        app:passTimeVarianceMs="500"/>
 
     <LinearLayout
         android:layout_width="match_parent"
